# x11-themes-baghira

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  config.h  config.h.in  config.status  configure  configure.files  configure.in  configure.in.in  install.sh  libtool  subdirs
bab/: Makefile  Makefile.am  Makefile.in  bab  bab.desktop  bab.h  bab.lsm  bab.moc  bab_iface.h  bab_iface.kidl  bab_iface_skel.cpp  main.cpp  styleconfdialog.cpp  styleconfdialog.h  styleconfdialog.moc
bab/.deps/: bab_iface_skel.Po  main.Po  styleconfdialog.Po
bab/Themes/: Brushed  Jaguar  Makefile  Makefile.am  Makefile.in  Milk  Panther  Tiger
colorscheme/: AquaBlue.kcsrc  AquaGraphite.kcsrc  Makefile  Makefile.am  Makefile.in
config/: Makefile  Makefile.am  Makefile.in  about.cpp  about.h  about.lo  about.moc  about.ui  colordialog.cpp  colordialog.h  colordialog.lo  colordialog.moc.cpp  colordialog.moc.lo  colorpicker.cpp  colorpicker.h  colorpicker.moc.cpp  colorpicker.moc.lo  configdialog.cpp  configdialog.h  configdialog.moc  configdialog.ui  generatePixmaps.sh  help.cpp  help.h  help.moc  help.ui  kstyle_baghira_config.cpp  kstyle_baghira_config.h  kstyle_baghira_config.la  kstyle_baghira_config.lo  kstyle_baghira_config.moc  pixmaps.h
config/.deps/: about.Plo  colordialog.Plo  colordialog.moc.Plo  colorpicker.Plo  colorpicker.moc.Plo  configdialog.Plo  help.Plo  kstyle_baghira_config.Plo
config/.libs/: kstyle_baghira_config.la  kstyle_baghira_config.lai
deco/: Doxyfile  Makefile  Makefile.am  Makefile.in  baghira.desktop  baghiraclient.cc  baghiraclient.h  baghiraclient.lo  baghiraclient.moc  generatePixmaps.sh  kwin3_baghira.la  masks.h  pixmaps.h
deco/.deps/: baghiraclient.Plo
deco/.libs/: kwin3_baghira.la  kwin3_baghira.lai
deco/config/: Makefile  Makefile.am  Makefile.in  aquariusbutton.cc  aquariusbutton.h  aquariusbutton.lo  aquariusbutton.moc.cc  aquariusbutton.moc.lo  baghiraconfig.cc  baghiraconfig.cc.new  baghiraconfig.h  baghiraconfig.h.new  baghiraconfig.lo  baghiraconfig.moc  colorpicker.cc  colorpicker.h  colorpicker.lo  colorpicker.moc.cc  configdialog.cc  configdialog.h  configdialog.lo  configdialog.moc  configdialog.ui  configdialog.ui.new  customdecosettings.ui  generatePixmaps.sh  kwin_baghira_config.la  pixmaps.h
deco/config/.deps/: aquariusbutton.Plo  aquariusbutton.moc.Plo  baghiraconfig.Plo  colorpicker.Plo  colorpicker.moc.Plo  configdialog.Plo
deco/config/.libs/: kwin_baghira_config.la  kwin_baghira_config.lai
icons/: Makefile  Makefile.in  readme  svgs.tar.bz2
imagebase/: AboutBaghira  brush-me  brushed-gradient  brushed-tile  button-base  button-glow  button-jaguar  button-milk  button-shadow  button_jaguar  button_jaguar_down  button_jaguar_menu  button_jaguar_menu_down  button_milk  button_milk_down  button_milk_menu  button_milk_menu_down  button_panther  button_panther_menu  checkbox  checkbox-milk  checkboxdown  checkboxdown-milk  checkboxdown.bak2  combo  combo-jaguar  combo-milk  combo-shadow  deco_glossy  icon_above  icon_behind  icon_close  icon_help  icon_maximize  icon_minimize  icon_shade  icon_sticky  preview  preview-menu  progress  (+29 more)
kickermenu/: Makefile  Makefile.am  Makefile.in  b_menu_panelapplet.la  (+7 more)
kickermenu-3.3/: Makefile  Makefile.am  Makefile.in  b_menuapplet.desktop  menuapplet.cpp  menuapplet.h
sessionapplet/: Makefile  Makefile.am  Makefile.in  dmctl.cpp  dmctl.h  usermanager.cpp  usermanager.desktop  usermanager.h  usermanager.lo  usermanager.lsm  usermanager.moc.cpp  usermanager.moc.lo  usermanager_panelapplet.la
sessionapplet/.deps/: dmctl.Plo  usermanager.Plo  usermanager.moc.Plo
sessionapplet/.libs/: usermanager_panelapplet.la  usermanager_panelapplet.lai
sidebar/: Makefile  Makefile.am  Makefile.in  baghiralinkdrag.h  baghiralinkdrag.lo  baghirasidebar.cpp  baghirasidebar.desktop  baghirasidebar.h  baghirasidebar.lo  baghirasidebar.moc  baghirasidebar_add.desktop  baghirasidebariface.h  baghirasidebariface.kidl  baghirasidebariface_skel.cpp  baghirasidebariface_skel.lo  configure.in.in  dndlistbox.cpp  dndlistbox.h  dndlistbox.lo  dndlistbox.moc  eject.xbm  konqsidebar_baghirasidebar.la  linkconfig.cpp  linkconfig.h  linkconfig.moc  linkconfig.ui  linkview.cpp  linkview.h  linkview.lo  linkview.moc  listboxlink.cpp  listboxlink.h  listboxlink.lo  lock.xbm  test.out
sidebar/.deps/: baghiralinkdrag.moc.Plo  baghirasidebar.Plo  baghirasidebariface_skel.Plo  dndlistbox.Plo  linkconfig.Plo  linkview.Plo  listboxlink.Plo
sidebar/.libs/: konqsidebar_baghirasidebar.la  konqsidebar_baghirasidebar.lai
starter/: Makefile  Makefile.am  Makefile.in  baghiralinkdrag.cpp  baghiralinkdrag.moc.lo  config.cpp  config.h  config.lo  config.moc  config.ui  help.cpp  help.h  help.lo  help.moc  help.ui  libbaghirastarter.la  linkconfig.cpp  linkconfig.h  linkconfig.lo  linkconfig.moc  linkconfig.ui  menu.cpp  menu.h  menu.lo  menu.moc.cpp  menu.moc.lo  mykey.h  starter.cpp  starter.desktop  starter.h  starter.lo  starter.moc.cpp  starter.moc.lo  starterconfig.cpp  starterconfig.h  starterconfig.lo  starterconfig.moc  starterconfig.ui  starterhelp.cpp  starterhelp.h  (+7 more)
starter/.deps/: baghiralinkdrag.Plo  config.Plo  help.Plo  linkconfig.Plo  menu.Plo  menu.moc.Plo  starter.Plo  starter.moc.Plo  starterconfig.Plo  starterhelp.Plo  starteriface_skel.Plo
starter/.libs/: libbaghirastarter.la  libbaghirastarter.lai
starter/Themes/Apple Aqua/CVS/: Entries  Repository
starter/Themes/Apple Graphite/CVS/: Entries  Repository  Root
starter/Themes/Apple Panther/: README
starter/Themes/Apple Panther/CVS/: Entries  Repository
starter/po/: Makefile  Makefile.in  de.gmo  de.po  starter.kbabel  starter.pot
style/: Makefile  Makefile.am  Makefile.in  baghira.cpp  baghira.h  baghira.la  baghira.lo  baghira.moc  baghira.themerc  bitmaps.h  eventfilter.cpp  fracts.h  generatePixmaps.sh  optionHandler.cpp  optionHandler.lo  pixmaps.h  polish.cpp  polish.lo  utils.cpp  utils.lo
style/.deps/: baghira.Plo  optionHandler.Plo  polish.Plo  utils.Plo
style/.libs/: baghira.la  baghira.lai
(+5 files in other folders)
